Bug #53665: fix popup styling with scrollbar

--- a/management/univention-web/css/popups.styl
+++ b/management/univention-web/css/popups.styl
@@ -1,6 +1,6 @@
 .dijitPopup
 	box-shadow: var(--box-shadow)
-	border: var(--popup-border)
+	border: var(--popup-border) !important // !important because dijit/popup.js set border none directly on the element
 	border-radius: 8px
 	overflow: hidden
 
